feat: 비밀방 사진추가

--- a/ROOMESCAPE.vcxproj
+++ b/ROOMESCAPE.vcxproj
@@ -225,6 +225,7 @@
   <ItemGroup>
     <Image Include="res\ROOMESCAPE.ico" />
     <Image Include="res\ROOMESCAPEDoc.ico" />
+    <Image Include="res\secret_room5.bmp" />
     <Image Include="res\Toolbar.bmp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
