feat: mainhall dlg

--- a/ROOMESCAPE.vcxproj.filters
+++ b/ROOMESCAPE.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="CDlg_tabControls.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="CDlgLetter.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ROOMESCAPE.cpp">
@@ -92,6 +95,9 @@
     <ClCompile Include="CDlg_tabControls.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="CDlgLetter.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="ROOMESCAPE.rc">
@@ -111,6 +117,12 @@
       <Filter>리소스 파일</Filter>
     </Image>
     <Image Include="res\Toolbar.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\Talyer_letter.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\MMMMAAAINHALLBMP.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
   </ItemGroup>
