--- a/ROOMESCAPE.vcxproj.filters
+++ b/ROOMESCAPE.vcxproj.filters
@@ -69,6 +69,18 @@
     <ClInclude Include="CDlg_bedroom_quiz.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="CDlg_library_answer.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="CDlg_library_journey.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="CDlg_library_minigame.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="CDlg_library_mirror.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ROOMESCAPE.cpp">
@@ -114,6 +126,18 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="CDlg_bedroom_quiz.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CDlg_library_answer.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CDlg_library_journey.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CDlg_library_minigame.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="CDlg_library_mirror.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
@@ -171,6 +195,21 @@
       <Filter>리소스 파일</Filter>
     </Image>
     <Image Include="res\Bedroom_Safety.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\bitmap2.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\Library.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\Library_Journey_Text.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\Library_Mirror.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\Library_Safe.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
   </ItemGroup>
