--- a/ROOMESCAPE.vcxproj
+++ b/ROOMESCAPE.vcxproj
@@ -183,6 +183,8 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CDlgLetter.h" />
+    <ClInclude Include="CDlgMirror.h" />
     <ClInclude Include="CDlg_bedRoom.h" />
     <ClInclude Include="CDlg_bedroom_quiz.h" />
     <ClInclude Include="CDlg_bedroom_safety.h" />
@@ -207,6 +209,8 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CDlgLetter.cpp" />
+    <ClCompile Include="CDlgMirror.cpp" />
     <ClCompile Include="CDlg_bedRoom.cpp" />
     <ClCompile Include="CDlg_bedroom_quiz.cpp" />
     <ClCompile Include="CDlg_bedroom_safety.cpp" />
@@ -242,6 +246,7 @@
     <Image Include="res\Bedroom.bmp" />
     <Image Include="res\Bedroom_Safety.bmp" />
     <Image Include="res\bitmap2.bmp" />
+    <Image Include="res\BrokenMirror.bmp" />
     <Image Include="res\doorStep_Image.bmp" />
     <Image Include="res\Library.bmp" />
     <Image Include="res\Library_Journey_Text.bmp" />
@@ -255,9 +260,11 @@
     <Image Include="res\mirror_text22.bmp" />
     <Image Include="res\mirror_text33.bmp" />
     <Image Include="res\mirror_text44.bmp" />
+    <Image Include="res\MMMMAAAINHALLBMP.bmp" />
     <Image Include="res\ROOMESCAPE.ico" />
     <Image Include="res\ROOMESCAPEDoc.ico" />
     <Image Include="res\secret_room5.bmp" />
+    <Image Include="res\Talyer_letter.bmp" />
     <Image Include="res\Toolbar.bmp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
