--- a/ROOMESCAPE.vcxproj
+++ b/ROOMESCAPE.vcxproj
@@ -189,6 +189,7 @@
     <ClInclude Include="CDlg_doorStep.h" />
     <ClInclude Include="CDlg_ending.h" />
     <ClInclude Include="CDlg_ending2.h" />
+    <ClInclude Include="CDlg_ending3.h" />
     <ClInclude Include="CDlg_library.h" />
     <ClInclude Include="CDlg_secretRoom.h" />
     <ClInclude Include="CDlg_tabControls.h" />
@@ -209,6 +210,7 @@
     <ClCompile Include="CDlg_doorStep.cpp" />
     <ClCompile Include="CDlg_ending.cpp" />
     <ClCompile Include="CDlg_ending2.cpp" />
+    <ClCompile Include="CDlg_ending3.cpp" />
     <ClCompile Include="CDlg_library.cpp" />
     <ClCompile Include="CDlg_secretRoom.cpp" />
     <ClCompile Include="CDlg_tabControls.cpp" />
